<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    tools:context=".PlayActivity">

    <com.example.android56.ChessBoard
        android:id="@+id/chessBoard"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        tools:ignore="Missing Constraints"/>

    <TextView
        android:id="@+id/playerMoveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/whiteMove"
        android:layout_below="@+id/chessBoard"
        android:textColor="@color/white"
        android:textSize="20dp"
        />

    <Button
    android:id="@+id/undoButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/chessBoard"
    android:background="@color/dark_green"
    android:text="@string/undo_button_text"
    android:layout_marginTop="45dp"
    android:layout_marginLeft="2dp"
    android:textColor="@color/white"
    android:textSize="20dp"/>

    <Button
        android:id="@+id/aiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chessBoard"
        android:layout_toRightOf="@id/undoButton"
        android:background="@color/dark_green"
        android:text="@string/ai_button_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="45dp"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/drawButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chessBoard"
        android:layout_toRightOf="@id/aiButton"
        android:background="@color/dark_green"
        android:text="@string/draw_button_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="45dp"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/resignButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chessBoard"
        android:layout_toRightOf="@id/drawButton"
        android:background="@color/dark_green"
        android:text="@string/resign_button_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="45dp"
        android:textColor="@color/white"
        android:textSize="20dp" />
</RelativeLayout>